fix form layout issues

--- a/css/admin-dashboard/_layout.scss
+++ b/css/admin-dashboard/_layout.scss
@@ -264,14 +264,15 @@ body {
 }
 
 .dash-main-content {
-	height             : 100vh;
-	overflow           : hidden scroll;
-	padding            : 2rem;
-	background-color   : oklch(var(--totalform-white));
-	display            : grid;
-	gap                : 2rem;
-	align-content      : stretch;
-	grid-template-rows : max-content auto;
+	height                : 100vh;
+	overflow              : hidden scroll;
+	padding               : 2rem;
+	background-color      : oklch(var(--totalform-white));
+	display               : grid;
+	gap                   : 2rem;
+	align-content         : stretch;
+	grid-template-rows    : max-content auto;
+	grid-template-columns : minmax(0, 1fr);
 
 	h1 {
 		color  : oklch(var(--totalform-mediumgray));
